# noise-compass

./: GROUNDING_V1.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/noise_compass/: __init__.py  arrival.py  combinators.py  compass.py  y_explorer.py
src/noise_compass.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/noise_compass/Lattice_DB/: SHADOW_BUFFER.json
src/noise_compass/architecture/: .gitignore  AISTATIC_ANALYSIS.md  BLUEPRINT.md  GEMINI_INTERNAL_HANDOFF.md  HANDOFF.md  HANDOFF_SESSION9.md  README.md  RLM_ANALYSIS.md  SOVEREIGN_KEY_0x52.key.txt  VERSION  __init__.py  accelerator.py  accreted_chat.py  activate_4d.py  add_emergence_live.py  apophatic_landscape.py  apophatic_test.py  archiver.py  audit_identity_demo.py  audit_kernel.py  autonomic_emergence.py  autoresearch_loop.py  backwards.py  basis_fit.py  bitnet_sync_test.py  calc_lba.py  check_cuda.py  check_volumes.py  chiral_check.py  coherence_check.py  complex_hypergraph.py  complex_plane.py  composite_projector_demo.py  conceptual_breeding.py  continuous_test.py  core.py  dashboard.py  debate.py  debate_loop.py  decode_quantum_state.py  (+199 more)
src/noise_compass/config/: embedding_model.txt  god_token_seeds.json
src/noise_compass/logic/: MOBIUS_AXIOMS.txt
src/noise_compass/system/: QWEN_WORKER_LOG.txt  __init__.py  actuate.py  actuator.py  agent_status.py  audit_0x52_h5.py  axiom_engine.py  axiomatic_restoration.py  bitnet.py  bitnet_tools.py  bitnet_worker.py  causal_scout.py  causal_tree.py  check_pruning.py  chiral_engine.py  chiral_synthesizer.py  cli.py  core.py  (+165 more)
(+15 files in other folders)
