[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noise-compass"
version = "0.1.1"
description = "Navigate meaning through structured noise using λ-calculus traversal operators"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "Fabricio Krusser Rossi", email = "fabriciokrusser@gmail.com" }
]
keywords = [
    "llm", "lambda-calculus", "reasoning", "gap-detection",
    "recursive-language-models", "semantic-navigation", "noise"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
h5 = ["h5py>=3.8"]
dev = ["pytest>=7", "build", "twine"]

[project.urls]
Homepage = "https://github.com/Fabuilds/noise-compass"
Repository = "https://github.com/Fabuilds/noise-compass"

[tool.setuptools.packages.find]
where = ["src"]
